# conan-transitive-headers

audio/: CMakeLists.txt  conanfile.py
audio/include/: audio.hpp
audio/src/: audio.cpp
audio/test_package/: CMakeLists.txt  conanfile.py
audio/test_package/src/: audio_test.cpp
base/: CMakeLists.txt  conanfile.py
base/include/: base.hpp
base/src/: base.cpp
base/test_package/: CMakeLists.txt  conanfile.py
base/test_package/src/: base_test.cpp
